1 player when user chose to be X works

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <button id="back-button">back</button>
   </div>
   <div class="outer-container game-area">
-    <button class="btn btn0"></button>
-    <button class="btn btn1"></button>
-    <button  class="btn btn2"></button>
-    <button  class="btn btn3"></button>
-    <button  class="btn btn4"></button>
-    <button  class="btn btn5"></button>
-    <button  class="btn btn6"></button>
-    <button  class="btn btn7"></button>
-    <button  class="btn btn8"></button>
+    <button id="0" class="btn btn0"></button>
+    <button id="1" class="btn btn1"></button>
+    <button id="2" class="btn btn2"></button>
+    <button id="3" class="btn btn3"></button>
+    <button id="4" class="btn btn4"></button>
+    <button id="5" class="btn btn5"></button>
+    <button id="6" class="btn btn6"></button>
+    <button id="7" class="btn btn7"></button>
+    <button id="8" class="btn btn8"></button>
   </div>
   <div class="outer-container game-over">
     <p>Game Over</p>
@@ -47,6 +47,7 @@
   <div class="player-prompt-container">
     <p id="P1-prompt" class="player-prompt">Player 1 (X). Go!</p>
     <p id="P2-prompt" class="player-prompt">Player 2 (O).Go!</p>
+    <p id="Computer-prompt" class="player-prompt">Computer.Go!</p>
   </div>
 </div> 
 <!--container-wrapper closed -->
